--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 新增步骤：截取GITHUB_SHA前7位，存入环境变量SHORT_SHA
+      - name: Set short SHA (7 digits)
+        run: echo "SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -47,6 +51,7 @@ jobs:
         with:
           context: .
           push: true
+          # 引用环境变量SHORT_SHA作为唯一标签
           tags: |
             ghcr.io/${{ github.repository_owner }}/ci-cd-practice:latest
-            ghcr.io/${{ github.repository_owner }}/ci-cd-practice:${{ substring(github.sha, 0, 7) }}
+            ghcr.io/${{ github.repository_owner }}/ci-cd-practice:${{ env.SHORT_SHA }}
